--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.29.0",
     "globals": "^15.11.0",
-    "husky": "^9.1.6",
+    "husky": "^8.0.3",
     "less": "^4.2.0",
     "postcss-html": "^1.7.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.3.3",
-    "stylelint": "^16.10.0",
+    "stylelint": "^15.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^36.0.1",
@@ -51,5 +51,29 @@
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9",
     "vue-tsc": "^2.1.6"
-  }
+  },
+  "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+            "prettier --write--parser json"
+        ],
+        "package.json": [
+            "prettier --write"
+        ],
+        "*.vue": [
+            "eslint --fix",
+            "prettier --write",
+            "stylelint --fix"
+        ],
+        "*.{scss,less,styl,html}": [
+            "stylelint --fix",
+            "prettier --write"
+        ],
+        "*.md": [
+            "prettier --write"
+        ]
+    }
 }
