--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-  "name": "vue3-template",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "lint:lint-staged": "lint-staged",
-    "prepare": "husky install",
-    "dev": "vite --mode development",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "lint:eslint": "eslint --cache --max-warnings 0 {src,mock}/**/*.{vue,ts,tsx} --fix",
-    "lint:prettier": "prettier --write **/*.{js,json,tsx,css,less,scss,vue,html,md}"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.7.7",
-    "element-plus": "^2.8.5",
-    "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.2.4",
-    "pinia-plugin-persistedstate": "^4.1.1",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
-  },
-  "devDependencies": {
-    "@eslint/create-config": "^1.3.1",
-    "@eslint/js": "^9.13.0",
-    "@types/node": "^22.7.6",
-    "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "eslint": "^9.13.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.29.0",
-    "globals": "^15.11.0",
-    "husky": "^8.0.3",
-    "less": "^4.2.0",
-    "postcss-html": "^1.7.0",
-    "postcss-less": "^6.0.0",
-    "prettier": "^3.3.3",
-    "stylelint": "^15.11.0",
-    "stylelint-config-html": "^1.1.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-less": "^3.0.1",
-    "stylelint-order": "^6.0.4",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9",
-    "vue-tsc": "^2.1.6"
-  },
-  "lint-staged": {
+    "name": "vue3-template",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "lint:lint-staged": "lint-staged",
+        "prepare": "husky install",
+        "dev": "vite --mode development",
+        "build": "vue-tsc -b && vite build",
+        "preview": "vite preview",
+        "lint:eslint": "eslint --cache --max-warnings 0 {src,mock}/**/*.{vue,ts,tsx} --fix",
+        "lint:prettier": "prettier --write **/*.{js,json,tsx,css,less,scss,vue,html,md}"
+    },
+    "dependencies": {
+        "@element-plus/icons-vue": "^2.3.1",
+        "axios": "^1.7.7",
+        "element-plus": "^2.8.5",
+        "normalize.css": "^8.0.1",
+        "nprogress": "^0.2.0",
+        "pinia": "^2.2.4",
+        "pinia-plugin-persistedstate": "^4.1.1",
+        "vue": "^3.5.12",
+        "vue-router": "^4.4.5"
+    },
+    "devDependencies": {
+        "@eslint/create-config": "^1.3.1",
+        "@eslint/js": "^9.13.0",
+        "@types/node": "^22.7.6",
+        "@types/nprogress": "^0.2.3",
+        "@vitejs/plugin-vue": "^5.1.4",
+        "@vitejs/plugin-vue-jsx": "^4.0.1",
+        "eslint": "^9.13.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-vue": "^9.29.0",
+        "globals": "^15.11.0",
+        "husky": "^8.0.3",
+        "less": "^4.2.0",
+        "mockjs": "^1.1.0",
+        "postcss-html": "^1.7.0",
+        "postcss-less": "^6.0.0",
+        "prettier": "^3.3.3",
+        "stylelint": "^15.11.0",
+        "stylelint-config-html": "^1.1.0",
+        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-config-standard": "^36.0.1",
+        "stylelint-config-standard-vue": "^1.0.0",
+        "stylelint-less": "^3.0.1",
+        "stylelint-order": "^6.0.4",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.10.0",
+        "vite": "^5.4.9",
+        "vite-plugin-mock": "^3.0.2",
+        "vue-tsc": "^2.1.6"
+    },
+    "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
             "eslint --fix",
             "prettier --write"
