--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
         "stylelint-order": "^6.0.4",
         "typescript": "^5.6.3",
         "typescript-eslint": "^8.10.0",
+        "unplugin-auto-import": "^0.18.3",
+        "unplugin-element-plus": "^0.8.0",
+        "unplugin-icons": "^0.19.3",
+        "unplugin-vue-components": "^0.27.4",
         "vite": "^5.4.9",
         "vite-plugin-mock": "^3.0.2",
         "vue-tsc": "^2.1.6"
