--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ VITE_APP_MOCK_BASEURL = /mock/api
 #后端接口的根路径
 VITE_APP_API_BASEURL = /api
 #是否使用mock
-VITE_APP_USE_MOCK = true
+VITE_APP_DEV_USE_MOCK=true
