--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@eslint/create-config": "^1.3.1",
         "@eslint/js": "^9.13.0",
+        "@iconify-json/ep": "^1.2.1",
         "@types/node": "^22.7.6",
         "@types/nprogress": "^0.2.3",
         "@vitejs/plugin-vue": "^5.1.4",
