--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "lint:lint-staged": "lint-staged",
         "prepare": "husky install",
         "dev": "vite --mode development",
-        "build": "vue-tsc -b && vite build",
+        "build": "vite build --mode production",
+        "test": "vitest",
         "preview": "vite preview",
         "lint:eslint": "eslint --cache --max-warnings 0 {src,mock}/**/*.{vue,ts,tsx} --fix",
         "lint:prettier": "prettier --write **/*.{js,json,tsx,css,less,scss,vue,html,md}"
@@ -20,6 +21,7 @@
         "nprogress": "^0.2.0",
         "pinia": "^2.2.4",
         "pinia-plugin-persistedstate": "^4.1.1",
+        "vite-plugin-compression": "^0.5.1",
         "vue": "^3.5.12",
         "vue-router": "^4.4.5"
     },
@@ -42,6 +44,8 @@
         "postcss-html": "^1.7.0",
         "postcss-less": "^6.0.0",
         "prettier": "^3.3.3",
+        "rollup-plugin-brotli": "^3.1.0",
+        "rollup-plugin-visualizer": "^5.12.0",
         "stylelint": "^15.11.0",
         "stylelint-config-html": "^1.1.0",
         "stylelint-config-prettier": "^9.0.5",
@@ -56,7 +60,9 @@
         "unplugin-icons": "^0.19.3",
         "unplugin-vue-components": "^0.27.4",
         "vite": "^5.4.9",
+        "vite-plugin-html": "^3.2.2",
         "vite-plugin-mock": "^3.0.2",
+        "vitest": "^2.1.4",
         "vue-tsc": "^2.1.6"
     },
     "lint-staged": {
